...
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/device_status_unknown" />

                <TextView
                    android:id="@+id/device_name"
                    style="@style/FontMonospaced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold"
                    tools:text="Device Name" />
            </LinearLayout>

            <com.ymid.wakeonlan.ui.ObfuscatedTextView
                android:id="@+id/device_mac"
                style="@style/FontMonospaced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceBody2"
...
