...
    <string name="add_device_shutdown_username">Username</string>
    <string name="add_device_shutdown_password">Password</string>
    <string name="add_device_shutdown_command">Shutdown Command</string>
    <string name="add_device_shutdown_command_helper">Command must be executable without triggering Interactive authentication (sudo password-prompt)</string>
    <string name="add_device_shutdown_os">Target OS</string>
    <string name="add_device_shutdown_os_suggestion">Suggested: %1$s</string>
    <string name="add_device_menu_save">Save</string>
    <string name="add_device_menu_delete">Delete</string>
    <string name="action_delete">Delete</string>

    <string name="add_device_error_mac_invalid">Invalid MAC Address</string>
    <string name="add_device_error_port_invalid">Invalid Port</string>
    <string name="add_device_error_name_empty">Name must not be empty</string>
...
